tests/algorithms/x/Scala/data_structures/stacks/stack.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/data_structures/stacks/stack.scala:105: error: value contains is not a member of Main.Stack
  println(String.valueOf(s.contains(1)))
                           ^
/workspace/mochi/tests/algorithms/x/Scala/data_structures/stacks/stack.scala:106: error: value contains is not a member of Main.Stack
  println(String.valueOf(s.contains(9)))
                           ^
two errors found
